--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
-			                    <li class=" smooth-menu"><a href="#education">education</a></li>
+                          <li class="smooth-menu"><a href="#about">about</a></li>
+			                    <li class="smooth-menu"><a href="#education">education</a></li>
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    <li class="smooth-menu"><a href="#experience">experience</a></li>
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
@@ -102,7 +103,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> thomas <br> vermeersch <span>.</span>   </h2>
 							<p>network & computer systems engineer</p>
-							<a href="assets/download/browney.txt" download>download resume</a>
+							<a href="assets/download/cv_Thomas_Vermeersch.docx" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
