--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 									I am a future network and systems engineer. I am currently studying "Network and Systems Management" at University College Leuven Limburg (UCLL).
 								</h3>
 								<p>
-                  I am 19 years old and live in Vlaams-Brabant, Belgium. I have a natural interest in It, specifically Networking and System management. I have about 4 years experience in managing linux servers and building networks at my home server lab. I'm looking forward to working in a really interesing place with many new things to learn, as the IT universe keeps expanding.
+                  I am 19 years old and live in Vlaams-Brabant, Belgium. I have a natural interest in It, specifically Networking and System management. I have about 4 years experience in managing linux servers and building networks at my home server lab. I'm looking forward to working in really interesing place with many new things to learn, as the IT universe keeps expanding.
 								</p>
 								<div class="row">
 									<div class="col-sm-3">
