--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 		<section id="portfolio" class="portfolio">
 			<div class="portfolio-details">
 				<div class="section-heading text-center">
-					<h2>portfolio</h2>
+					<h2>projects</h2>
 				</div>
 				<div class="container">
 					<div class="portfolio-content">
@@ -492,29 +492,18 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/nextcloud.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												ui/ux design
+											<a href="https://nextcloud.com/">
+												nextcloud
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/portfolio/p2.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/pfsense.jpeg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												ui/ux design
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-								</div><!-- /.col -->
-
-								<div class="col-sm-4">
-									<div class="item">
-										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												web design
+											<a href="https://www.pfsense.org/">
+												pfsense
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -522,18 +511,29 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p4.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/java.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												web development
+											<a href="https://en.wikipedia.org/wiki/Java_Platform,_Enterprise_Edition">
+												java web development
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
+								</div><!-- /.col -->
+
+								<div class="col-sm-4">
+									<div class="item">
+										<img src="assets/images/portfolio/mikrotik.png" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="https://www.mikrotik.com">
+												mikrotik
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/portfolio/p5.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/proxmox.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												web development
+											<a href="https://proxmox.com">
+												proxmox
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
