changed project titles

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 										<img src="assets/images/portfolio/nextcloud.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="https://nextcloud.com/">
-												nextcloud
+												Personal cloud server for home buisiness
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -503,7 +503,7 @@
 										<img src="assets/images/portfolio/pfsense.jpeg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="https://www.pfsense.org/">
-												pfsense
+                        Setting up pfsense router, firewall & proxy
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -514,7 +514,7 @@
 										<img src="assets/images/portfolio/java.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="https://en.wikipedia.org/wiki/Java_Platform,_Enterprise_Edition">
-												java web development
+												Java web development project using spring
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -525,7 +525,7 @@
 										<img src="assets/images/portfolio/mikrotik.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="https://www.mikrotik.com">
-												mikrotik
+												Setting up mikrotik router os
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -533,7 +533,7 @@
 										<img src="assets/images/portfolio/proxmox.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="https://proxmox.com">
-												proxmox
+												Learning the ins and outs of virtualization with proxmox
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
